<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_logout"/>
 <!--    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:showAsAction="always"
        android:title="@string/menu_search"/> -->
    <item
        android:id="@+id/menu_reload"
        android:icon="@drawable/ic_menu_reload"
        android:showAsAction="always"
        android:title="@string/menu_reload"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share"
        android:showAsAction="always"
        android:title="@string/menu_share"/>

</menu>