<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_nowplaying_info"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/default_artist" />

        <LinearLayout
            android:id="@+id/lrl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_info_pressed"
            android:orientation="horizontal"
            android:padding="4dip" >

            <ImageView
                android:id="@+id/imv_albumArt"
                android:layout_width="80dip"
                android:layout_height="80dip"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description"
                android:src="@drawable/default_album" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="8dip" >

                <TextView
                    android:id="@+id/txv_trackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/bg_nowplaying_info"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/lnl_artistiTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="4dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="4dip"
                        android:text="@string/artist_by"
                        android:textColor="@color/bg_nowplaying_info"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txv_artistTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/bg_nowplaying_info"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnl_albumTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="4dip" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@drawable/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_controls"
        android:orientation="vertical"
        android:padding="4dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txv_durationCurrent"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/duration_blank"
                android:textColor="@color/bg_nowplaying_info" />

            <SeekBar
                android:id="@+id/sb_progress"
                style="@style/SeekBarStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxHeight="1dip" />

            <TextView
                android:id="@+id/txv_durationAll"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/duration_blank"
                android:textColor="@color/bg_nowplaying_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/btn_shuffle"
                android:layout_width="45dip"
                android:layout_height="45dip"
                android:layout_marginRight="8dip"
                android:background="@drawable/states_shuffle"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/btn_prev"
                android:layout_width="38dip"
                android:layout_height="38dip"
                android:background="@drawable/states_prev"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/btn_play"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/states_play"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/btn_forward"
                android:layout_width="38dip"
                android:layout_height="38dip"
                android:background="@drawable/states_forward"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/btn_repeat"
                android:layout_width="45dip"
                android:layout_height="45dip"
                android:layout_marginLeft="8dip"
                android:background="@drawable/states_repeat"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>